fix(front): fixes PageTransition container flex layout

--- a/front/src/styles/global.css
+++ b/front/src/styles/global.css
@@ -124,6 +124,9 @@ body {
 
 .transition-container {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .header,
