build(front): adds posts page route and preliminary grid and styles

--- a/front/src/styles/pages/posts.css
+++ b/front/src/styles/pages/posts.css
@@ -89,6 +89,53 @@
   }
 }
 
+.posts {
+  h1.title {
+    text-align: center;
+  }
+
+  .posts-list {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    @apply self-center
+      grid
+      grid-cols-3
+      auto-rows-max
+      gap-2
+      list-none;
+      li {
+        @apply text-center
+          flex
+          flex-col
+          justify-center
+          h-full
+          mb-0
+          border
+          list-none;
+        &:first-of-type {
+          @apply col-span-2
+            row-span-2;
+        }
+        a {
+          display: block;
+          height: 100%;
+          width: 100%;
+          @apply p-9
+            border-0
+            flex
+            flex-col
+            justify-center;
+          &:hover,
+          &:focus {
+            @apply bg-neutral-700;
+          }
+        }
+      }
+  }
+}
+
 .privacy {
   font-size: 1rem;
   @apply p-5
