build(front): removes theme-toggle for javascript-disabled browsers

--- a/front/static/styles/noscript.css
+++ b/front/static/styles/noscript.css
@@ -4,6 +4,9 @@ body .main,
 body .footer {
   opacity: 1 !important;
 }
+.theme-toggle {
+  display: none !important;
+}
 .image-loader {
   display: none;
 }
