--- a/front/src/styles/components/theme-toggle.css
+++ b/front/src/styles/components/theme-toggle.css
@@ -1,6 +1,5 @@
 .theme-toggle {
-  @apply
-    p-3
+  @apply p-3
     pr-0
     transition
     dg--transition-effect;
@@ -25,20 +24,20 @@
 
 .dark-theme .ready {
   svg#sun {
-    top: 0;
-    transition-delay: 1s;
+    top: 33px;
   }
   svg#moon {
-    top: 33px;
+    top: 0;
+    transition-delay: .5s;
   }
 }
 
 .light-theme .ready {
   svg#moon {
-    top: 0;
-    transition-delay: 1s;
+    top: 33px;
   }
   svg#sun {
-    top: 33px;
+    top: 0;
+    transition-delay: .5s;
   }
 }
