--- a/front/src/styles/components/theme-toggle.css
+++ b/front/src/styles/components/theme-toggle.css
@@ -8,7 +8,7 @@
   }
   svg {
     position: absolute;
-    transition: top 2s ease-in-out 0s;
+    transition: top 1s ease-in-out 0s;
   }
   #moon {
     padding-bottom: 1px;
@@ -24,20 +24,22 @@
 
 .dark-theme .ready {
   svg#sun {
+    transition-duration: .2s;
     top: 33px;
   }
   svg#moon {
     top: 0;
-    transition-delay: .5s;
+    transition-delay: .2s;
   }
 }
 
 .light-theme .ready {
   svg#moon {
+    transition-duration: .2s;
     top: 33px;
   }
   svg#sun {
     top: 0;
-    transition-delay: .5s;
+    transition-delay: .2s;
   }
 }
