--- a/front/src/styles/pages/posts.css
+++ b/front/src/styles/pages/posts.css
@@ -1,6 +1,3 @@
-@import "../components/tw-components.css";
-@import "../components/utilities.css";
-
 .posts,
 .post,
 .privacy {
@@ -8,8 +5,8 @@
     sm:max-w-5xl
     transition-colors
     dg--transition-effect
-    opacity-95;;
-    line-height: 1.6;
+    opacity-95;
+  line-height: 1.6;
   h1,
   h2,
   h3,
@@ -93,47 +90,6 @@
 .posts {
   h1.title {
     text-align: center;
-  }
-
-  .posts-list {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    @apply self-center
-      grid
-      grid-cols-3
-      auto-rows-max
-      gap-2
-      list-none;
-      li {
-        @apply text-center
-          flex
-          flex-col
-          justify-center
-          h-full
-          mb-0
-          border
-          list-none;
-        &:first-of-type {
-          @apply col-span-2
-            row-span-2;
-        }
-        a {
-          display: block;
-          height: 100%;
-          width: 100%;
-          @apply p-9
-            border-0
-            flex
-            flex-col
-            justify-center;
-          &:hover,
-          &:focus {
-            @apply bg-neutral-700;
-          }
-        }
-      }
   }
 }
 
