--- a/front/src/styles/components/tw-components.css
+++ b/front/src/styles/components/tw-components.css
@@ -54,8 +54,8 @@
   .dg--photo-link-dark {
     @apply dg--photo-vignette-dark;
     background: rgba(var(--black), 0.77);
+    border: 1px solid rgba(var(--foreground-rgb), 0.11);
     color: rgb(var(--white));
-    text-shadow: 0px 0px 8px var(--black);
     text-shadow: 0px 0px 23px rgb(var(--black));
     &:hover,
     &:focus {
