build(front): adds and creates styles for posts/post pages

--- a/front/src/styles/global.css
+++ b/front/src/styles/global.css
@@ -3,9 +3,10 @@
 @import "components/tw-components.css";
 @import "components/Code/Code.css";
 @import "components/nav.css";
-@import "components/posts-grid.css";
 @import "components/theme-toggle.css";
+@import "components/posts-grid.css";
 @import "pages/posts.css";
+@import "pages/post.css";
 
 @tailwind base;
 @tailwind components;
