--- a/front/src/styles/components/Code/Code.css
+++ b/front/src/styles/components/Code/Code.css
@@ -1,4 +1,5 @@
 @import "syntax.css";
+
 .syntax-highlighter {
   @apply shadow-lg
     rounded-lg
@@ -17,8 +18,7 @@
   }
   .title {
     @apply p-3
-      rounded-t-md
-      font-mono;
+      rounded-t-md;
     background-color: rgb(var(--background-end-rgb));
     color: rgb(var(--foreground-rgb));
     position: absolute;
