--- a/front/src/styles/components/fonts.css
+++ b/front/src/styles/components/fonts.css
@@ -1,31 +1,31 @@
 @font-face {
   font-display: swap;
+  font-family: "Public Sans Extra Light";
+  src: url("/fonts/PublicSans-ExtraLight.woff2") format("woff2");
+}
+
+@font-face {
+  font-display: swap;
   font-family: "Public Sans";
-  src: url("/fonts/PublicSans-Regular.woff2") format("woff2"),
-    url("/fonts/PublicSans-Regular.woff") format("woff"),
-    url("/fonts/PublicSans-Regular.ttf") format("truetype"),
-    url("/fonts/PublicSans-Regular.otf") format("opentype");
+  src: url("/fonts/PublicSans-Regular.woff2") format("woff2");
 }
 
 @font-face {
   font-display: swap;
   font-family: "Public Sans Bold";
-  src: url("/fonts/PublicSans-Bold.woff2") format("woff2"),
-    url("/fonts/PublicSans-Bold.woff") format("woff"),
-    url("/fonts/PublicSans-Bold.ttf") format("truetype"),
-    url("/fonts/PublicSans-Bold.otf") format("opentype");
+  src: url("/fonts/PublicSans-Bold.woff2") format("woff2");
 }
 
 @font-face {
   font-display: swap;
   font-family: "Public Sans Black";
-  src: url("/fonts/PublicSans-Black.woff2") format("woff2"),
-    url("/fonts/PublicSans-Black.woff") format("woff"),
-    url("/fonts/PublicSans-Black.ttf") format("truetype"),
-    url("/fonts/PublicSans-Black.otf") format("opentype");
+  src: url("/fonts/PublicSans-Black.woff2") format("woff2");
 }
 
 @layer utilities {
+  .dg--font-psxl {
+    font-family: "Public Sans Extra Light", sans-serif;
+  }
   .dg--font-ps {
     font-family: "Public Sans", sans-serif;
   }
@@ -35,9 +35,4 @@
   .dg--font-psbl {
     font-family: "Public Sans Black", sans-serif;
   }
-}
-
-* {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
