--- a/front/src/styles/global.css
+++ b/front/src/styles/global.css
@@ -3,8 +3,8 @@
 @import "components/utilities.css";
 @import "components/nav.css";
 @import "components/theme-toggle.css";
-@import "pages/posts.css";
 @import "components/Code/Code.css";
+@import "pages/posts.css";
 
 @tailwind base;
 @tailwind components;
@@ -59,7 +59,7 @@ body {
   @apply flex
     flex-col
     items-center
-    dg--font-ps
+    dg--font-psxl
     transition-colors
     dg--transition-effect
     text-base
