--- a/front/src/styles/pages/post.css
+++ b/front/src/styles/pages/post.css
@@ -19,4 +19,38 @@
       bottom: 0;
     }
   }
+  h1 {
+    left: 0;
+    position: relative;
+    text-shadow: 0 0 3.3rem rgba(var(--background-saturated), 0.77);
+    top: -1.5rem;
+    z-index: 5;
+  }
+}
+.post-main {
+  @apply shadow-lg;
+  margin-top: 5rem;
+  position: relative;
+  width: 89%;
+  top: -8rem;
+  padding: 9rem 2rem 2rem;
+  z-index: -1;
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(var(--background-saturated));
+}
+.post-article {
+  width: 73%;
+  padding-right: .5rem;
+}
+.post-aside {
+  width: 25%;
+  padding-left: .5rem;
+  text-align: right;
+  h2 {
+    font-size: 1.77rem;
+  }
+  li {
+    list-style-type: none;
+  }
 }
