--- a/front/src/styles/pages/not-found.css
+++ b/front/src/styles/pages/not-found.css
@@ -1,3 +1,5 @@
+@tailwind components;
+
 .not-found {
   @apply flex
     flex-col
@@ -6,8 +8,14 @@
     @apply mb-11;
   }
   a {
-    @apply dg--link-hover
-      dg--transition-effect;
+    @apply transition;
+    transition-duration: var(--transform-duration);
+    transition-timing-function: var(--transform-timing-function);
+    color: rgb(var(--foreground-rgb));
+    &:hover,
+    &:focus {
+      color: rgb(var(--highlight-rgb));
+    }
   }
   h1 {
     @apply text-9xl
