--- a/front/src/styles/components/nav.css
+++ b/front/src/styles/components/nav.css
@@ -8,10 +8,10 @@
     py-3
     opacity-0;
   position: absolute;
-  transition: transform .3s ease, opacity .3s ease, color .3s ease;
-  transform: translateY(-133%);
+  transition: top .3s ease, opacity .3s ease, color .3s ease;
+  top: -3rem;
   &:focus {
-    transform: translateY(0%);
+    top: 1.77rem;
     @apply opacity-100;
   }
 }
