--- a/front/src/styles/components/tw-components.css
+++ b/front/src/styles/components/tw-components.css
@@ -1,7 +1,7 @@
 @layer components {
   .dg--link-hover {
-    @apply transition
-      dg--transition-effect;
+    transition-property: color;
+    @apply dg--transition-effect;
     color: rgb(var(--foreground-rgb));
     &:hover,
     &:focus {
@@ -12,23 +12,23 @@
     @apply transition;
   }
   .dg--btn-secondary {
-    @apply transition
-      duration-150
+    @apply inline-block
       transform-gpu
-      shadow-sm
-      inline-block
-      text-sm
       border
+      text-sm
       font-extralight
-      drop-shadow-sm;
-    background-color: rgb(var(--background-end-rgb));
+      shadow-sm
+      drop-shadow-sm
+      transition
+      duration-150;
     border-bottom-color: rgb(var(--btn-secondary-highlight-rgb));
+    background-color: rgb(var(--background-end-rgb));
     &:hover,
     &:focus {
-      @apply brightness-125
-        shadow-md
+      @apply scale-105
         transform-gpu
-        scale-105;
+        shadow-md
+        brightness-125;
     }
   }
   .dg--photo-vignette-light {
@@ -37,22 +37,22 @@
     overflow: hidden;
     &:hover,
     &:focus {
-      border-color: rgba(var(--foreground-rgb), 0.01)
+      border-color: rgba(var(--foreground-rgb), 0.01);
     }
   }
   .dg--photo-vignette-dark {
-    box-shadow: 0 0 200px rgba(var(--black),0.88) inset;
+    box-shadow: 0 0 200px rgba(var(--black), 0.88) inset;
     border: 1px solid rgba(var(--foreground-rgb-faded), 0.01);
     overflow: hidden;
     &:hover,
     &:focus {
-      border-color: rgba(var(--foreground-rgb-faded), 0.01)
+      border-color: rgba(var(--foreground-rgb-faded), 0.01);
     }
   }
   .dg--photo-link-light {
     transition-property: background, color, text-shadow;
     @apply dg--photo-vignette-light;
-    background: rgba(255,255,255, 0.77);
+    background: rgba(255, 255, 255, 0.77);
     color: var(--black);
     text-shadow: 0px 0px 12px rgba(var(--black), 0.2);
     &:hover,
