--- a/front/src/styles/pages/post.css
+++ b/front/src/styles/pages/post.css
@@ -1,58 +1,62 @@
 .post-header {
   display: block;
   position: relative;
-  height: 400px;
-  width: 100%;
   z-index: 1;
+  width: 100%;
+  height: 400px;
   .hero {
     @apply rounded
             shadow-md;
-    background-repeat: no-repeat;
-    background-position: center bottom;
-    background-size: cover;
-    max-height: 100%;
-    height: 400px;
-    width: 100%;
-    overflow: clip;
     position: relative;
     z-index: 4;
+    background-position: center bottom;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 400px;
+    max-height: 100%;
+    overflow: clip;
     &.image-bottom img {
       bottom: 0;
     }
   }
   h1 {
-    left: 0;
     position: relative;
-    text-shadow: 0 0 3.3rem rgba(var(--background-saturated), 0.77);
     top: -1.68rem;
+    left: 0.33rem;
     z-index: 5;
+    text-shadow: 0 0 3.3rem rgba(var(--background-saturated), 0.77);
   }
 }
 .post-main {
   @apply shadow-lg;
-  margin-top: 5rem;
-  position: relative;
-  width: 89%;
-  top: -8rem;
-  padding: 9rem 2rem 2rem;
-  z-index: -1;
   display: flex;
+  position: relative;
+  top: -8rem;
   flex-direction: row;
-  background-color: rgb(var(--background-saturated));
+  z-index: -1;
   z-index: 0;
+  margin-top: 5rem;
+  background-color: rgb(var(--background-saturated));
+  padding: 9rem 2rem 2rem;
+  width: 89%;
 }
 .post-article {
+  padding-right: 0.5rem;
   width: 73%;
-  padding-right: .5rem;
 }
 .post-aside {
+  padding-left: 0.5rem;
   width: 25%;
-  padding-left: .5rem;
   text-align: right;
   h2 {
     font-size: 1.77rem;
   }
   li {
+    font-size: 1rem;
     list-style-type: none;
+  }
+  a {
+    @apply dg--link-hover;
   }
 }
