--- a/front/src/styles/components/posts-grid.css
+++ b/front/src/styles/components/posts-grid.css
@@ -16,7 +16,7 @@
     position: relative;
     grid-column: span 6;
     cursor: pointer;
-    box-shadow: inset 0 0 0 1px rgb(var(--background-saturated));
+    box-shadow: inset 0 0 0 .03rem rgb(var(--black));
     background-position: center top;
     background-size: cover;
     background-repeat: no-repeat;
@@ -28,7 +28,7 @@
       backdrop-brightness-90;
     &:hover,
     &:focus {
-      @apply backdrop-brightness-125;
+      @apply backdrop-brightness-105;
     }
     &:first-child {
       grid-row: span 24;
@@ -104,7 +104,6 @@
     .post-link {
       display: block;
       backdrop-filter: blur(0.5rem);
-      transition-property: background, color, text-shadow;
       box-sizing: border-box;
       border: unset;
       width: 100%;
