--- a/front/src/styles/components/tw-components.css
+++ b/front/src/styles/components/tw-components.css
@@ -41,25 +41,26 @@
     }
   }
   .dg--photo-vignette-dark {
-    box-shadow: 0 0 200px rgba(var(--black), 0.88) inset;
-    border: 1px solid rgba(var(--foreground-rgb-faded), 0.01);
+    transition-property: background, color, text-shadow, border-color,
+      box-shadow;
+    box-shadow: inset 0 0 5rem rgba(var(--black), 0.88);
+    border: 1px solid rgba(var(--foreground-rgb-faded), 0.23);
     overflow: hidden;
     &:hover,
     &:focus {
-      border: black;
-      border-width: 0.5px;
+      box-shadow: inset 0 0 0.5rem rgba(var(--black), 0.18);
+      border-color: rgb(var(--background-saturated));
     }
   }
   .dg--photo-link-light {
     @apply dg--photo-vignette-light;
-    background: rgba(255, 255, 255, 0.77);
-    color: var(--black);
+    background-color: rgba(var(--white), 0.77);
+    color: rgba(var(--black), 0.8);
     text-shadow: 0px 0px 12px rgba(var(--black), 0.2);
     &:hover,
     &:focus {
-      background: rgba(var(--white), 0.01);
-      color: white;
-      text-shadow: 0px 0px 12px rgba(var(--black), 1);
+      background: rgba(var(--white), 0.3);
+      text-shadow: 0px 0px 0.33rem rgba(var(--white), 0.5);
     }
   }
   .dg--photo-link-dark {
@@ -68,9 +69,9 @@
     color: rgba(var(--white), 0.88);
     &:hover,
     &:focus {
-      background: rgba(var(--white), 0.33);
-      color: rgba(0, 0, 0, 1);
-      text-shadow: 0px 0px 23px rgb(var(--white));
+      background: rgba(var(--white), 0.03);
+      color: rgb(var(--white));
+      text-shadow: 0px 0px 0.33rem rgba(var(--white), 0.33);
     }
   }
 }
