--- a/front/src/styles/components/tw-components.css
+++ b/front/src/styles/components/tw-components.css
@@ -59,7 +59,8 @@
     text-shadow: 0px 0px 12px rgba(var(--black), 0.2);
     &:hover,
     &:focus {
-      background: rgba(var(--white), 0.3);
+      background: rgba(var(--white), 0.1);
+      color: rgba(var(--black), 1);
       text-shadow: 0px 0px 0.33rem rgba(var(--white), 0.5);
     }
   }
