--- a/front/src/lib/styles/pages/post.css
+++ b/front/src/lib/styles/pages/post.css
@@ -1,84 +1,88 @@
-.post-header {
+.post {
   display: block;
-  position: relative;
-  z-index: 1;
-  background-color: rgba(var(--background-saturated), 0.77);
-  width: 100%;
-  height: 400px;
-  &.hide {
-    height: 0;
-  }
-  .hero {
-    @apply rounded
-      shadow-md;
-    position: absolute;
-    opacity: 1;
-    z-index: 4;
-    transition: opacity 0.5s ease-in;
-    background-position: center bottom;
-    background-size: cover;
-    background-repeat: no-repeat;
+  margin-bottom: 3.33rem;
+  .background {
+    border-radius: 0.77rem;
     background-color: rgba(var(--background-saturated), 0.77);
+    padding: 2.33rem;
+    overflow: auto;
+    @apply shadow-xl;
+  }
+  .hero-wrap {
+    display: block;
+    position: relative;
+    z-index: 1;
     width: 100%;
     height: 400px;
-    max-height: 100%;
-    overflow: clip;
-    &.hero-thumbnail {
+    @apply shadow-xl;
+    &.hide {
+      height: 0;
+    }
+    .hero {
+      @apply rounded
+        shadow-md;
+      position: absolute;
       opacity: 1;
-      &::before {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        backdrop-filter: blur(0.5rem);
-        content: " ";
+      z-index: 4;
+      transition: opacity 0.5s ease-in;
+      background-position: center bottom;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-color: rgba(var(--background-saturated), 0.77);
+      width: 100%;
+      height: 400px;
+      max-height: 100%;
+      overflow: clip;
+      &.hero-thumbnail {
+        opacity: 1;
+        &::before {
+          position: absolute;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          backdrop-filter: blur(0.5rem);
+          content: " ";
+        }
+        &.loaded {
+          opacity: 0;
+        }
       }
       &.loaded {
-        opacity: 0;
+        z-index: 5;
       }
-    }
-    &.loaded {
-      z-index: 5;
     }
   }
   h1 {
-    position: absolute;
-    bottom: -3.3rem;
+    position: relative;
+    top: -2.3rem;
     left: 0.33rem;
     z-index: 5;
     text-shadow: 0 -0.11rem 1.5rem rgba(var(--background-saturated), 0.77);
   }
-}
-.post-main {
-  @apply shadow-lg;
-  display: flex;
-  position: relative;
-  top: -8rem;
-  flex-direction: row;
-  z-index: -1;
-  z-index: 0;
-  margin-top: 5rem;
-  background-color: rgb(var(--background-saturated));
-  padding: 9rem 2rem 2rem;
-  width: 89%;
-}
-.post-article {
-  padding-right: 0.5rem;
-  width: 73%;
-}
-.post-aside {
-  padding-left: 0.5rem;
-  width: 25%;
-  text-align: right;
-  h2 {
-    font-size: 1.77rem;
+  .post-article,
+  .post-aside {
+    display: block;
   }
-  li {
-    font-size: 1rem;
-    list-style-type: none;
+  .post-article {
+    float: left;
+    padding-right: 0.5rem;
+    width: 75%;
   }
-  a {
-    @apply dg--link-hover;
+  .post-aside {
+    float: right;
+    padding-left: 0.5rem;
+    width: 25%;
+    text-align: right;
+    h2 {
+      font-size: 1.77rem;
+    }
+    li {
+      font-size: 1rem;
+      list-style-type: none;
+    }
+    a {
+      @apply dg--link-hover;
+    }
   }
 }
